# ChangeLog for dev-python/werkzeug
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/werkzeug/ChangeLog,v 1.7 2009/01/24 16:57:21 patrick Exp $

*werkzeug-0.4.1 (24 Jan 2009)

  24 Jan 2009; Patrick Lauer <patrick@gentoo.org> +werkzeug-0.4.1.ebuild:
  Bump to 0.4.1, fixes #255443

  08 Jan 2009; Patrick Lauer <patrick@gentoo.org> -werkzeug-0.3.1-r1.ebuild:
  Removing old

*werkzeug-0.4 (06 Dec 2008)

  06 Dec 2008; Patrick Lauer <patrick@gentoo.org> +werkzeug-0.4.ebuild:
  Bumping to 0.4, closing 249442

*werkzeug-0.3.1-r1 (04 Aug 2008)

  04 Aug 2008; Christian Hoffmann <hoffie@gentoo.org> -werkzeug-0.2.ebuild,
  -werkzeug-0.3.1.ebuild, +werkzeug-0.3.1-r1.ebuild:
  Fixing installation of docs (they went to /usr/docs/ directly), cleaning
  old

*werkzeug-0.3.1 (20 Jul 2008)

  20 Jul 2008; Christian Hoffmann <hoffie@gentoo.org>
  +werkzeug-0.3.1.ebuild:
  version bump

  15 Mar 2008; Tiziano Müller <dev-zero@gentoo.org> werkzeug-0.2.ebuild:
  Added various fixes, added src_test together with dependencies.

*werkzeug-0.2 (15 Mar 2008)

  15 Mar 2008; Christian Hoffmann <hoffie@gentoo.org> +metadata.xml,
  +werkzeug-0.2.ebuild:
  Initial commit, ebuild by me (hoffie@gentoo.org), Adrian Perez
  <the.lightman@gmail.com> suggested a very similar one in bug 209631
