@@ -1,4 +1,6 @@
 DIST Werkzeug-0.4.1.tar.gz 641239 RMD160 c5489f3d45681996cc55d3b7badf28564038fb70 SHA1 a0c9c4f203b8afd2c6ec0ca1e0b9c88acc92454b SHA256 96f4a1ac7cdc81f7817b574632d6fecdd553fe8c3ae46aa60eb380793999cf63
+DIST Werkzeug-0.5.tar.gz 1620257 RMD160 39475c313ff411e21538108830ec196ec8b88247 SHA1 cd76645f44f0416d8bc019875422207c30452637 SHA256 68609a74a0fbca56abe9003490eb29bd25b97304610c663bd86b66bba2eca00d
 EBUILD werkzeug-0.4.1.ebuild 973 RMD160 89d2a3688f25d138b189749911ffaf41e06030fe SHA1 1744516694b88c043c4fd33c4118ee97694721cc SHA256 48f4961f5ca7e3e1f10c5242cdc83eff62ea3d9c22ebf1ccd7b174d58cfb642d
-MISC ChangeLog 1348 RMD160 f5cee9aa0bc5a95214e98c5d7c9cbe5b67ae61e3 SHA1 7390b549aabc1a4e7092e4f084c1c01ac233489a SHA256 ac369ffed17c3e2e21f4f85a1dcd2c4a394a0c8e1ccaefa02450afd8f5cc5f20
+EBUILD werkzeug-0.5.ebuild 852 RMD160 8df818cff8f9b0911c501af5c9948306353b0a1b SHA1 f0038631660b91b12463d406f6ce9a239a10beaa SHA256 7f180fd0560225f71de88ff0c5aad9bf342da97997539bba422dd059e229fe96
+MISC ChangeLog 1621 RMD160 7e546a9b0cf0118769071bfdcbdc5028f224e2f4 SHA1 74664db732abe76bb27114d0462ab1f1ba88b4e8 SHA256 0d84bcc243d40f5b4a70872f0a880e92ec77f2530a9938dfa8c4bdd235f7668e
 MISC metadata.xml 221 RMD160 94ba04938aeae695e3489291391ed803a7b24fbf SHA1 7dab0a51d3f7802265942a1120b8aca3ab6b5ef9 SHA256 58bcee3b5f820e8d5e913a39b7e8c9c554abfea9f56bc31030b52f6be60e19ad
